Extend the workaround for broken MacViews window dragging to 10.11.

I didn't catch that it was needed on 10.11 up front because the presence
of the window that shows construction stripes in Chromium builds made
the problem vanish. Weird stuff.

Bug: 838353
Change-Id: I7cf9e352ff51dccfdbc561da58905175dab68742
Reviewed-on: https://chromium-review.googlesource.com/1038624
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555491}
Former-commit-id: 7bf450504615961b3043e96364cde3360387be72